--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <body>
     <div id="topbarContainer" class="topbarContainer">
       <div id="cartDD" class="cartDD"></div>
-      <div id="topbar" class="topbar">
+      <nav id="topbar" class="topbar">
+        <!-- Nike Logo -->
         <svg
           id="logo"
           class="logo"
@@ -35,7 +36,7 @@
           />
           <div id="totalItems" class="itemsInCart">0</div>
         </div>
-      </div>
+      </nav>
     </div>
     <div id="container" class="container">
       <div class="grid-container">
@@ -77,7 +78,7 @@
     </div>
   </body>
   <script src="./utils/fakedata.js"></script>
-  <script src="./utils/script.js"></script>
-  <script src="./utils/previewImg.js"></script>
-  <script src="./utils/galleryModal.js"></script>
+  <script src="./js/script.js"></script>
+  <script src="./js/previewImg.js"></script>
+  <script src="./js/galleryModal.js"></script>
 </html>
