--- a/index.html
+++ b/index.html
@@ -63,19 +63,23 @@
             >
               Add to Cart
             </button>
-            <div id="cartSection" class="cartSection">
-              <button onclick="decrement()" id="decButton" class="incDecButton">
-                -
-              </button>
-              <div></div>
-              <button onclick="addToCart()" id="incButton" class="incDecButton">
-                +
-              </button>
-            </div>
           </div>
         </div>
       </div>
+      <div class="videoSection">
+        <div class="videoWrapper">
+          <iframe
+            id="videoPlayer"
+            class="videoPlayer"
+            src=""
+            title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
     </div>
+    <footer><p>&copy; 2023 Nike, Inc. All Rights Reserved</p></footer>
   </body>
   <script src="./utils/fakedata.js"></script>
   <script src="./js/script.js"></script>
