--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Product</title>
+    <title>Nike | AF1 High</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/addedToCart.css" />
     <link rel="stylesheet" href="./css/modal.css" />
