Set Timeout Added to Modal

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <footer><p>&copy; 2023 Nike, Inc. All Rights Reserved</p></footer>
   </body>
   <script src="./utils/fakedata.js"></script>
-  <script src="./js/script.js"></script>
+  <script src="./js/cart.js"></script>
   <script src="./js/previewImg.js"></script>
   <script src="./js/galleryModal.js"></script>
 </html>
